# morgoth-slowing-growth-curves

./: .gitignore  AUTONOMOUS_STATUS.md  DATA_SOURCE.md  EXECUTION_PLAN.md  PLAN.md  README.md  REPRODUCE.md  pyproject.toml  requirements.txt
config/: channels_regions.yaml  config.example.yaml
docs/: BOOTSTRAP.md  DATA_INVENTORY.md  REPRODUCE.md  RUN_READINESS.md  analysis_plan.md  artifact_rejection_plan.md  aws_cloud_plan.md  aws_getting_started.md  bdsp_io_update_notice.md  claims_table.md  cn_submission_plan.md  coverage_by_stage.md  coverage_expansion_plan.md  coverage_report.md  data_dictionary.md  data_sources.md  description_architecture.md  fable_review.md  feature_extraction.md  feature_spec.md  figure5_pipeline_schematic_brief.md  fleet_dependencies.md  fleet_launch.md  focal_design_investigation.md  gate_rerun_spec.md  human_ceiling_plan.md  label_cleanup_plan.md  label_quality_plan.md  literature_review.md  localization_improvement_plan.md  manuscript_draft.md  methods_audit.md  morgoth_gate_outputs.md  morgoth_h5_loader_patch.md  morphology_features.md  n3_expansion_plan.md  omop-query-instructions.txt  paper_outline.md  phase0_findings.md  phaseA_preregistration.md  (+12 more)
fleet/: CHECK_WHEN_DONE.sh  Dockerfile  README.md  RELAUNCH_WHEN_BACK.sh  RUNBOOK.md  STATUS.sh  backup_offsite.sh  batch_worker.py  complete_cohort.sh  do_launch.sh  entrypoint.sh  final_rebuild.sh  finalize.sh  finish_cohort_recompute.sh  gate_dashboard.py  gate_worker.py  launch_fleet.sh  launch_spot_fleet.sh  make_manifest.py  make_manifest_cohort.py  make_manifest_cohort_rest.py  tick.sh  (+16 more)
(+490 files in other folders)
