[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "morgoth-slowing-growth-curves"
version = "0.1.0"
description = "Normative growth curves for EEG slowing features (focal vs generalized), for morgoth-viewer reports."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = ["src"]
